--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,7 @@ a {
   aspect-ratio: 1;
   object-fit: contain;
   object-position: center;
-  width: 24px;
+  width: 18px;
   flex-shrink: 0;
 }
 
@@ -406,7 +406,7 @@ a {
 
 /* Media queries */
 @media (max-width: 991px) {
-  .content {
+  .forumcontent {
     max-width: 100%;
   }
 
