--- a/community/links.css
+++ b/community/links.css
@@ -5,7 +5,7 @@
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.05);
     background-color: #fff;
     display: flex;
-    min-width: 240px;
+    min-width: 270px;
     padding: 30px 20px;
     flex-direction: column;
     overflow: hidden;
@@ -79,7 +79,7 @@
 
 .panel-link {
     display: flex;
-    align-items: start;
+    align-items: center;
     justify-content: start;
     text-decoration: none;
     color: inherit;
@@ -95,6 +95,7 @@
     line-height: 1;
     letter-spacing: 0.72px;
     width: 17px;
+    padding-top: 2px;
 }
 
 .link-text {
