--- a/community/styles.css
+++ b/community/styles.css
@@ -1,5 +1,5 @@
 /* Base styles */
-* {
+/* * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -13,40 +13,40 @@ body {
     Helvetica,
     sans-serif;
   background-color: #f5f5f5;
-}
+} */
 
-button {
+/* button {
   background: none;
   border: none;
   cursor: pointer;
   font-family: inherit;
-}
+} */
 
-a {
+/* a {
   text-decoration: none;
-}
+} */
 
 /* Main layout */
-.main-layout {
+/* .main-layout {
   display: flex;
   padding: 40px 20px;
   align-items: flex-start;
   gap: 13px;
   overflow: hidden;
   justify-content: space-between;
-}
+} */
 
 /* Content area */
 .forumcontent {
   min-width: 240px;
   padding: 0 10px;
   overflow: hidden;
-  width: 755px;
+  flex-grow: 1;
 }
 
 .content-header {
   display: flex;
-  width: 100%;
+  width: auto;
   align-items: flex-start;
   gap: 40px 100px;
   justify-content: space-between;
@@ -138,7 +138,7 @@ a {
 .posts {
   margin-top: 30px;
   max-width: 100%;
-  width: 735px;
+  width: 100%;
   padding: 3px 5px;
   overflow: hidden;
 }
@@ -302,7 +302,7 @@ a {
 }
 
 /* Right panel */
-.right-panel {
+/* .right-panel {
   align-items: center;
   border-radius: 5px;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.05);
@@ -401,7 +401,7 @@ a {
   line-height: 17px;
   letter-spacing: 0.33px;
   width: 213px;
-}
+} */
 
 /* Media queries */
 @media (max-width: 991px) {
